# convert-to-webp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/convert_to_webp/: main.py
