[project]
name = "convert-to-webp"
version = "0.1.0"
description = "Batch convert images to webp"
authors = [
    {name = "GrassSand", email = "grasssand@users.noreply.github.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
convert-to-webp = "convert_to_webp.main:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
