[project]
name = "convert-to-webp"
description = "Batch convert images to webp"
authors = [
    {name = "GrassSand", email = "grasssand@users.noreply.github.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
convert-to-webp = "convert_to_webp.main:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/convert_to_webp/__init__.py"
